corrects map z-index

--- a/assets/sass/sjvair/pages/map.sass
+++ b/assets/sass/sjvair/pages/map.sass
@@ -10,6 +10,7 @@ body.map
         .map-el
             height: 100%
             width: 100%
+            z-index: 0;
 
     .display-options
         float: left
